test/lit/pto/frontend_pipe_module_kind_verify_invalid.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @bad_cube_pipe_in_vector_module(%consumer_buf: i32) {
    pto.aic_initialize_pipe {id = 0, dir_mask = 1, slot_size = 1024}
      (c2v_consumer_buf = %consumer_buf : i32)
    return
  }
}

// CHECK: error: 'pto.aic_initialize_pipe' op must be inside a cube kernel function
